--- a/map_1.html
+++ b/map_1.html
@@ -91,7 +91,7 @@ console.log(cnt);
 if (cnt==5)
 {cnt=0}
      if (cnt==1)
-	{ window.open("./Literacy_Rate.html");
+	{ window.open("./Literacy_Rate_1.html");
 	}
   });
 }
